--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hello-pangea/dnd": "^16.1.0",
+    "@tanstack/react-query": "^4.17.1",
+    "@tanstack/react-query-devtools": "^4.17.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,16 +13,18 @@
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "framer-motion": "^7.6.12",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.39.5",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
     "recoil": "^0.7.6",
     "styled-components": "^5.3.6",
-    "styled-reset": "^4.4.2",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
